# klvm_rs

./: Cargo.toml  README.md
.github/workflows/: benchmark.yml  build-arm64-wheels.yml  build-crate.yml  build-m1-wheel.yml  build-npm.yml  build-test.yml  build-test.yml.bak
benches/: deserialize.rs  run-program.rs
benchmark/: run-benchmark.py
docs/: new-operator-checklist.md
fuzz/: Cargo.toml  decode.py  gen_corpus.py
fuzz/fuzz_targets/: allocator.rs  canonical_serialization.rs  canonical_serialization_br.rs  deserialize.rs  deserialize_br.rs  deserialize_br_rand_tree.rs  fuzzing_utils.rs  incremental_serializer.rs  keccak.rs  make_tree.rs  node_eq.rs  object_cache.rs  operators.rs  parse_triples.rs  run_program.rs  serialized_len.rs  serialized_length.rs  serialized_length_trusted.rs  serializer.rs  serializer_cmp.rs  tree_cache.rs  tree_hash.rs
klvm-fuzzing/: Cargo.toml
klvm-fuzzing/src/: fuzzing_utils.rs  make_tree.rs  pick_node.rs  serialized_len.rs
src/: allocator.rs  bls_ops.rs  from_node_ptr.rs  lib.rs  more_ops.rs  run_program.rs  test_ops.rs
src/serde/: de_br.rs  object_cache.rs  tools.rs
tests/: run-programs.py  run.py
tools/: Cargo.toml
wasm/: Cargo.toml  README.md
wasm/src/: api.rs  lazy_node.rs  run_program.rs  serialize.rs
wasm/tests/: index.js
wheel/: Cargo.toml  README.md
wheel/python/chik_clvm_rs/: chik_clvm_rs.pyi  curry_and_treehash.py  de.py  program.py
wheel/python/clvm_rs/: program.py  tree_hash.py
wheel/python/tests/: test_apis.py  test_curry_and_treehash.py  test_program.py  test_serialize.py
wheel/src/: adapt_response.rs  api.rs  lazy_node.rs
