[package]
name = "klvm-fuzzing"
version = "0.16.1"
edition = "2021"
license = "Apache-2.0"
description = "Fuzzing tools for klvm Projects on Rust"
authors = ["Jack Nelson <j.nelson@chiknetwork.com>"]
homepage = "https://github.com/Chik-Network/klvm_rs"
repository = "https://github.com/Chik-Network/klvm_rs"


[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"] }
klvmr = { workspace = true, features = ["counters"] }
chik-sha2 = { workspace = true }
anyhow = { workspace = true }

