[package]
name = "klvm-rs-test-tools"
version = "0.1.0"
authors = ["Arvid Norberg <arvid@chik.net>"]
edition = "2021"
license = "Apache-2.0"
description = "Developer tools for the KLVM interpreter"
homepage = "https://github.com/Chik-Network/klvm_rs/tools/"
repository = "https://github.com/Chik-Network/klvm_rs/tools/"
readme = "README.md"

[profile.release]
lto = true

[dependencies]
hex = "=0.4.3"
rand = "0.8.4"
sha1 = "=0.10.5"
linreg = "=0.2.0"
klvmr = { path = ".." }

[[bin]]
name = "generate-fuzz-corpus"
test = false
bench = false

[[bin]]
name = "benchmark-klvm-cost"
test = false
bench = false

