[package]
name = "klvm-rs-test-tools"
version = "0.2.0"
authors = ["Arvid Norberg <arvid@chiknetwork.com>", "Cameron Cooper <cameron@chiknetwork.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Developer tools for the KLVM interpreter"
homepage = "https://github.com/Chik-Network/klvm_rs/tools/"
repository = "https://github.com/Chik-Network/klvm_rs/tools/"
readme = "README.md"

[dependencies]
hex-literal = "0.4.1"
hex = "0.4.3"
rand = "0.8.5"
sha1 = "0.10.6"
linreg = "0.2.0"
klvmr = { path = ".." }
chik-bls = "0.10.0"
num-bigint = "0.4.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
clap = { version = "4.5.9", features = ["derive"] }

[[bin]]
name = "generate-fuzz-corpus"
test = false
bench = false

[[bin]]
name = "benchmark-klvm-cost"
test = false
bench = false

[[bin]]
name = "verify-zksnark"
test = false
bench = false
