[package]
name = "klvm_wasm"
version = "0.3.2"
authors = ["Richard Kiss <him@richardkiss.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Implementation of `klvm` for Chik Network's cryptocurrency"
homepage = "https://github.com/Chik-Network/klvm_rs/"
repository = "https://github.com/Chik-Network/klvm_rs/"
readme = "README.md"

[lib]
name = "klvm_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
klvmr = { path = ".." }
wasm-bindgen = "=0.2.87"
wasm-bindgen-test = "=0.3.34"
js-sys = "0.3.61"
getrandom = { version = "0.2.9", features = ["js"] }