[package]
name = "klvm_wasm"
version = "0.8.0"
authors = ["Richard Kiss <him@richardkiss.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Implementation of `klvm` for Chik Network's cryptocurrency"
homepage = "https://github.com/Chik-Network/klvm_rs/"
repository = "https://github.com/Chik-Network/klvm_rs/"
readme = "README.md"

[lib]
name = "klvm_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
klvmr = { path = ".." }
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.42"
js-sys = "0.3.69"
getrandom = { version = "0.2.15", features = ["js"] }
