[package]
name = "klvm_wasm"
version = "0.12.0"
authors = ["Richard Kiss <him@richardkiss.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Implementation of `klvm` for Chik Network's cryptocurrency"
homepage = "https://github.com/Chik-Network/klvm_rs/"
repository = "https://github.com/Chik-Network/klvm_rs/"
readme = "README.md"

[lib]
name = "klvm_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
klvmr = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
js-sys = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
